--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -45,6 +45,11 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^1.0.0
+  simple_map_viewer:
+    git:
+      url: https://github.com/tanmoy27112000/simple_map_viewer
+      ref: master
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
